# mustardscript

./: .gitignore  AGENTS.md  CLOSE_LANGUAGE_GAPS.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENT_PROMPT.md  JSLITE_EXECUTOR.md  LANGUAGE_GAPS.md  LANGUAGE_GAPS_2.md  LANGUAGE_GAPS_3.md  PRODUCTION_AUDIT.md  PRODUCTION_AUDIT_2.md  PROPERTY_BASED_TESTING.md  README.md  REFACTORING_2.md  REFACTORING_3.md  REFACTORING_RUNTIME.md  SECURITY.md  SECURITY_ISSUES.md  SECURITY_ISSUES_2.md  SECURITY_ISSUES_3.md  SECURITY_ISSUES_4.md  SECURITY_ISSUES_5.md  SECURITY_ISSUES_6.md  SECURITY_ISSUES_7.md  SECURITY_ISSUES_8.md  SECURITY_THREAT_MODEL.md  TESTING_GAPS.md  TODOS.md  USE_CAP_GAPS_2.md  USE_CASE_EXAMPLES.md  USE_CASE_GAPS.md  USE_CASE_GAPS_2.md  VERIFICATION_GAPS.md  VERIFICATION_GAPS_2.md  VERIFICATION_GAPS_3.md  VERIFICATION_GAPS_4.md  index.d.ts  index.js  index.ts  (+10 more)
benchmarks/: README.md  budgets.json  compare.ts  ptc-attribution.ts  ptc-durable-gallery.ts  ptc-fixtures.ts  ptc-gallery.ts  ptc-headline-seed-fixtures.ts  ptc-headline-seeds.ts  ptc-portfolio.ts  ptc-sentinels.ts  smoke.js  smoke.ts  support.ts  workloads.ts
crates/jslite/: Cargo.toml
crates/jslite-bridge/: Cargo.toml
crates/jslite-bridge/src/: codec.rs  dto.rs  operations.rs
crates/jslite-node/: Cargo.toml
crates/jslite-node/src/: lib.rs
crates/jslite-sidecar/: Cargo.toml
crates/jslite-sidecar/src/: lib.rs  main.rs
crates/jslite-sidecar/tests/: hostile_protocol.rs  protocol.rs  protocol_state.rs
crates/jslite/src/: diagnostic.rs  ir.rs  lib.rs  limits.rs  parser.rs  runtime.rs  structured.rs
crates/jslite/src/parser/: expressions.rs  mod.rs  operators.rs  patterns.rs  scope.rs  statements.rs
crates/jslite/src/parser/tests/: acceptance.rs  rejections.rs
crates/jslite/src/runtime/: accounting.rs  api.rs  async_runtime.rs  bytecode.rs  conversions.rs  env.rs  exceptions.rs  gc.rs  mod.rs  properties.rs  serialization.rs  shared.rs  state.rs  validation.rs  vm.rs
crates/jslite/src/runtime/async_runtime/: mod.rs  promises.rs  reactions.rs  scheduler.rs
crates/jslite/src/runtime/builtins/: arrays.rs  collections.rs  install.rs  intl.rs  mod.rs  objects.rs  primitives.rs  promises.rs  regexp.rs  strings.rs  support.rs
crates/jslite/src/runtime/compiler/: assignments.rs  bindings.rs  context.rs  control.rs  expressions.rs  mod.rs  statements.rs
crates/jslite/src/runtime/conversions/: boundary.rs  coercions.rs  errors.rs  mod.rs  operators.rs
crates/jslite/src/runtime/tests/: async_host.rs  exceptions.rs  execution.rs  gc.rs  mod.rs  serialization.rs
crates/jslite/src/runtime/validation/: bytecode.rs  mod.rs  policy.rs  snapshot.rs  walk.rs
crates/jslite/tests/: async_runtime.rs  bigint.rs  builtin_surface.rs  call_semantics.rs  cancellation.rs  coverage_audit.rs  equivalence_corpus.rs  golden.rs  iteration.rs  keyed_collections.rs  property_generated_execution.rs  property_roundtrip.rs  property_snapshot_roundtrip.rs  runtime_correctness.rs  security_hostile_inputs.rs  snapshot_policy_security.rs  structured_boundary_security.rs
crates/jslite/tests/property_support/: mod.rs
crates/mustard/: Cargo.toml
crates/mustard-bridge/: Cargo.toml
crates/mustard-bridge/src/: codec.rs  dto.rs  lib.rs  operations.rs
crates/mustard-node/: Cargo.toml
crates/mustard-node/src/: boundary_binary.rs  lib.rs
crates/mustard-sidecar/: Cargo.toml
crates/mustard-sidecar/src/: lib.rs  main.rs
crates/mustard-sidecar/tests/: hostile_protocol.rs  protocol.rs  protocol_state.rs  support.rs
crates/mustard-wasm/: Cargo.toml
crates/mustard-wasm/src/: lib.rs
crates/mustard/benches/: runtime_core.rs
crates/mustard/src/: cancellation.rs  diagnostic.rs  ir.rs  lib.rs  span.rs  structured.rs
crates/mustard/src/parser/: expressions.rs  mod.rs  operators.rs  patterns.rs  statements.rs
crates/mustard/src/parser/tests/: acceptance.rs  mod.rs  rejections.rs
crates/mustard/src/runtime/: accounting.rs  api.rs  bytecode.rs  env.rs  exceptions.rs  gc.rs  gc_trigger_tests.rs  mod.rs  properties.rs  serialization.rs  shared.rs  snapshot_validation_tests.rs  state.rs  vm.rs
crates/mustard/src/runtime/async_runtime/: promises.rs  reactions.rs  scheduler.rs
crates/mustard/src/runtime/builtins/: arrays.rs  collections.rs  install.rs  intl.rs  mod.rs  objects.rs  primitives.rs  promises.rs  regexp.rs  strings.rs  support.rs
crates/mustard/src/runtime/compiler/: assignments.rs  bindings.rs  context.rs  control.rs  expressions.rs  mod.rs  statements.rs
crates/mustard/src/runtime/conversions/: boundary.rs  coercions.rs  errors.rs  operators.rs
crates/mustard/src/runtime/tests/: async_host.rs  collections.rs  diagnostics.rs  gc.rs  mod.rs  serialization.rs
crates/mustard/src/runtime/validation/: bytecode.rs  mod.rs  policy.rs  snapshot.rs  walk.rs
crates/mustard/tests/: async_runtime.rs  bigint.rs  builtin_surface.rs  call_semantics.rs  cancellation.rs  coverage_audit.rs  equivalence_corpus.rs  golden.rs  iteration.rs  keyed_collections.rs  property_generated_execution.rs  property_roundtrip.rs  property_snapshot_roundtrip.rs  runtime_correctness.rs  runtime_debug_metrics.rs  security_hostile_inputs.rs  snapshot_policy_security.rs  structured_boundary_security.rs
crates/mustard/tests/property_support/: mod.rs
docs/: BENCHMARK_FINDINGS.md  BYTECODE.md  CONFORMANCE.md  HARDENING.md  HOST_API.md  LANGUAGE.md  LIMITS.md  MUSTARD_EXECUTOR.md  PTC_BENCHMARK_COVERAGE.md  RELEASE.md  RUNTIME_MODEL.md  SECURITY_MODEL.md  SECURITY_THREAT_MODEL.md  SERIALIZATION.md  SIDECAR_PROTOCOL.md  USE_CASE_EXAMPLES.md  USE_CASE_GAPS.md
examples/: agent-style.js  agent-style.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bytecode_execution.rs  bytecode_validation.rs  ir_lowering.rs  parser.rs  sidecar_protocol.rs  snapshot_load.rs
lib/: cancellation.js  cancellation.ts  errors.ts  executor.js  executor.ts  policy.js  policy.ts  progress.js  progress.ts  runtime.js  runtime.ts  sidecar.ts  structured.js  structured.ts
plans/: PTC_2.md  PTC_PERFORMANCE.md  performance.md  return-value.md  wasm-playground.md
website/: .gitignore  (+5 more)
(+357 files in other folders)
