[workspace]
members = [
  "crates/jslite",
  "crates/jslite-node",
  "crates/jslite-sidecar",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["jslite contributors"]
repository = "https://github.com/keppoai/jslite"

[workspace.dependencies]
anyhow = "1.0.100"
bincode = "1.3.3"
futures = "0.3.31"
indexmap = { version = "2.12.0", features = ["serde"] }
napi = { version = "3.8.4", default-features = false, features = ["async", "napi8"] }
napi-derive = "3.5.3"
oxc_allocator = "0.124.0"
oxc_ast = "0.124.0"
oxc_parser = "0.124.0"
oxc_span = "0.124.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slotmap = { version = "1.1.1", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1.51.1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
