[workspace]
members = [
  "crates/mustard",
  "crates/mustard-bridge",
  "crates/mustard-node",
  "crates/mustard-sidecar",
  "crates/mustard-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["MustardScript contributors"]
repository = "https://github.com/keppoai/mustardscript"

[workspace.dependencies]
anyhow = "1.0.100"
bincode = "1.3.3"
futures = "0.3.31"
hmac = "0.12.1"
indexmap = { version = "2.12.0", features = ["serde"] }
napi = { version = "3.8.4", default-features = false, features = ["async", "napi8"] }
napi-derive = "3.5.3"
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.19"
oxc_allocator = "0.124.0"
oxc_ast = "0.124.0"
oxc_parser = "0.124.0"
oxc_span = "0.124.0"
oxc_syntax = { version = "0.124.0", features = ["to_js_string"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
slotmap = { version = "1.1.1", features = ["serde"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["parsing"] }
tokio = { version = "1.51.1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
regex = "1.12.2"
rand = "0.9.2"
sha2 = "0.10.9"
