[package]
name = "jslite-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
indexmap = "2.12.0"
jslite = { path = "../crates/jslite" }
jslite-sidecar = { path = "../crates/jslite-sidecar" }
libfuzzer-sys = "0.4"
serde_json = "1.0.145"

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ir_lowering"
path = "fuzz_targets/ir_lowering.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_validation"
path = "fuzz_targets/bytecode_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytecode_execution"
path = "fuzz_targets/bytecode_execution.rs"
test = false
doc = false
bench = false

[[bin]]
name = "snapshot_load"
path = "fuzz_targets/snapshot_load.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sidecar_protocol"
path = "fuzz_targets/sidecar_protocol.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
