[package]
name = "jslite-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared bridge DTOs and operations for jslite adapters"

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
jslite = { path = "../jslite" }
serde.workspace = true
serde_json.workspace = true
