[package]
name = "jslite-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Node-API addon for the jslite runtime"

[lib]
crate-type = ["cdylib"]

[dependencies]
jslite = { path = "../jslite" }
jslite-bridge = { path = "../jslite-bridge" }
napi.workspace = true
napi-derive.workspace = true

[build-dependencies]
napi-build = "2.3.1"
