[package]
name = "jslite-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
jslite = { path = "../jslite" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
