[package]
name = "jslite-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Sidecar process for the jslite runtime"

[dependencies]
anyhow.workspace = true
jslite-bridge = { path = "../jslite-bridge" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
base64 = "0.22.1"
hmac.workspace = true
jslite = { path = "../jslite" }
sha2.workspace = true
