[package]
name = "mustard-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Node-API addon for the MustardScript runtime"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
mustard = { path = "../mustard" }
mustard-bridge = { path = "../mustard-bridge" }
hmac.workspace = true
napi.workspace = true
napi-derive.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true

[build-dependencies]
napi-build = "2.3.1"
