[package]
name = "mustard-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Sidecar process for the MustardScript runtime"

[dependencies]
anyhow.workspace = true
hmac.workspace = true
mustard = { path = "../mustard" }
mustard-bridge = { path = "../mustard-bridge" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
base64 = "0.22.1"
sha2.workspace = true
